# BarCodeGenerator

./: .gitignore  .pylintrc  README.md  pyproject.toml  run.py
src/controllers/: tag_creator_controller.py  tag_creator_controller_test.py
src/errors/: error_handler.py
src/main/routes/: tag_routes.py
src/main/server/: server.py
src/validators/: tag_creator_validator.py  tag_creator_validator_test.py
src/views/: tag_creator_view.py
